--- a/springboot-crud/pom.xml
+++ b/springboot-crud/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.xiao</groupId>
-	<artifactId>springboot-mysql</artifactId>
+	<artifactId>springboot-crud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springboot-mysql</name>
+	<name>springboot-crud</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -19,34 +19,6 @@
 	</properties>
 
 	<dependencies>
-		<!-- druid 数据库连接池 -->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.0.14</version>
-		</dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.21</version>
-        </dependency>
-		<dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.0.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependency>
-        <!--测试环境hsqldb-->
-        <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <scope>runtime</scope>
-        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
