--- a/springboot-freemarker/src/main/resources/application.properties
+++ b/springboot-freemarker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##端口号
 server.port=8080
 # freemarker文件路径
-spring.freemarker.template-loader-path=classpath:/templates
+#spring.freemarker.template-loader-path=classpath:/templates/
 # 设定静态文件路径 js,css等
 spring.mvc.static-path-pattern  =/static/**
 
