--- a/springboot-rabbitmq/src/main/resources/application.properties
+++ b/springboot-rabbitmq/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.application.name=rabbitmq-hello
 
-spring.rabbitmq.host=192.168.122.136
+spring.rabbitmq.host=127.0.0.1
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=root
-spring.rabbitmq.password=root
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
